--- a/GruzoMaster/GruzoMaster.csproj
+++ b/GruzoMaster/GruzoMaster.csproj
@@ -84,6 +84,7 @@
     <Compile Include="AuthorizationMenu.Designer.cs">
       <DependentUpon>AuthorizationMenu.cs</DependentUpon>
     </Compile>
+    <Compile Include="DriverInfo.cs" />
     <Compile Include="MainMenu.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -95,6 +96,12 @@
     </Compile>
     <Compile Include="MenuAddDriver.Designer.cs">
       <DependentUpon>MenuAddDriver.cs</DependentUpon>
+    </Compile>
+    <Compile Include="MenuChangeDataDriver.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MenuChangeDataDriver.Designer.cs">
+      <DependentUpon>MenuChangeDataDriver.cs</DependentUpon>
     </Compile>
     <Compile Include="MenuDrivers.cs">
       <SubType>Form</SubType>
@@ -118,6 +125,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MenuAddDriver.resx">
       <DependentUpon>MenuAddDriver.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MenuChangeDataDriver.resx">
+      <DependentUpon>MenuChangeDataDriver.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MenuDrivers.resx">
       <DependentUpon>MenuDrivers.cs</DependentUpon>
