--- a/GruzoMaster/GruzoMaster.csproj
+++ b/GruzoMaster/GruzoMaster.csproj
@@ -116,11 +116,18 @@
       <DependentUpon>MenuDrivers.cs</DependentUpon>
     </Compile>
     <Compile Include="MySQL\MySQL.cs" />
+    <Compile Include="Objects\Transport.cs" />
     <Compile Include="OtherFunctions.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Objects\User.cs" />
     <Compile Include="Objects\UserSettings.cs" />
+    <Compile Include="TransportMenu\TransportAddInParkMenu.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TransportMenu\TransportAddInParkMenu.Designer.cs">
+      <DependentUpon>TransportAddInParkMenu.cs</DependentUpon>
+    </Compile>
     <Compile Include="TransportMenu\TransportMenu.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -157,6 +164,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="TransportMenu\TransportAddInParkMenu.resx">
+      <DependentUpon>TransportAddInParkMenu.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="TransportMenu\TransportMenu.resx">
       <DependentUpon>TransportMenu.cs</DependentUpon>
     </EmbeddedResource>
